<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ededed"
    android:orientation="vertical">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/setting_skin"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/dimen_20_dp"
        android:paddingTop="@dimen/dimen_40_dp"
        android:paddingEnd="@dimen/dimen_20_dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/app_skin_base" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/app_skin_common" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_skin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dimen_20_dp"
        android:paddingTop="@dimen/dimen_16_dp"
        android:paddingEnd="@dimen/dimen_20_dp"
        android:paddingBottom="@dimen/dimen_40_dp">

        <RadioButton
            android:id="@+id/rb_base_skin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/app_radio_green_selector"
            android:drawablePadding="@dimen/dimen_16_dp"
            android:gravity="center_horizontal"
            android:text="@string/base_type"
            android:textColor="@color/color_101113"
            android:textSize="@dimen/text_size_16" />


        <RadioButton
            android:id="@+id/rb_common_skin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/app_radio_green_selector"
            android:drawablePadding="@dimen/dimen_16_dp"
            android:gravity="center_horizontal"
            android:text="@string/common_skin"
            android:textColor="@color/color_101113"
            android:textSize="@dimen/text_size_16" />

    </RadioGroup>

</LinearLayout>